tests/errors/import_twice.orus
use tests::modules::hello_module
use tests::modules::hello_module

fn main() {
    print("done")
}

